--- a/app/views/etymologies/_index.html.erb
+++ b/app/views/etymologies/_index.html.erb
@@ -114,10 +114,10 @@
 		<%# end %> -->
 		
 		<div id="<%= e.id%>_etymology_metas_div">
-	      <%# if e.meta != nil%>
-	        <%# t = Time.now %>
-	        <%#= render :partial => 'metas/index', :locals => {:t => t.to_f, :element =>e, :meta => e.meta , :head_id => head_id} %>	
-		  <%# end %>
+	      <% if e.meta != nil%>
+	        <% t = Time.now %>
+	        <%= render :partial => 'metas/index', :locals => {:t => t.to_f, :element =>e, :meta => e.meta , :head_id => head_id} %>	
+		  <% end %>
 		</div>
 		
 		<div id="<%= e.id%>_etymology_translations_div"> 
