--- a/app/views/literary_quotations/_index.html.erb
+++ b/app/views/literary_quotations/_index.html.erb
@@ -150,7 +150,7 @@ $(document).ready(function() {
 		<div id="<%= e.id%>_literaryquotation_metas_div">
 	      <% if e.meta != nil%>
 	        <% t = Time.now %>
-	        <%#= render :partial => 'metas/index', :locals => {:t => t.to_f, :element =>e, :meta => e.meta , :head_id => head_id} %>	
+	        <%= render :partial => 'metas/index', :locals => {:t => t.to_f, :element =>e, :meta => e.meta , :head_id => head_id} %>	
 		  <% end %>
 		</div>
 	
