--- a/app/views/pronunciations/_index.html.erb
+++ b/app/views/pronunciations/_index.html.erb
@@ -74,10 +74,10 @@ $(document).ready(function() {
 		 <% end %>
 		
 		<div id="<%= e.id%>_pronunciation_metas_div">
-	      <%# if e.meta != nil%>
+	      <% if e.meta != nil%>
 	        <% t = Time.now %>
-	        <%#= render :partial => 'metas/index', :locals => {:t => t.to_f, :element =>e, :meta => e.meta , :head_id => head_id} %>	
-		  <%# end %>
+	        <%= render :partial => 'metas/index', :locals => {:t => t.to_f, :element =>e, :meta => e.meta , :head_id => head_id} %>	
+		  <% end %>
 		</div>
 
 
