--- a/app/views/spellings/_index.html.erb
+++ b/app/views/spellings/_index.html.erb
@@ -75,10 +75,10 @@ $(document).ready(function() {
 		</dl>
 	
 		<div id="<%= e.id%>_spelling_metas_div">
-      		<%# if e.meta != nil%>
+      		<% if e.meta != nil%>
         		<% t = Time.now %>
-        		<%#= render :partial => 'metas/index', :locals => {:t => t.to_f, :element =>e, :meta => e.meta , :head_id => head_id} %>	
-	  		<%# end %>
+        		<%= render :partial => 'metas/index', :locals => {:t => t.to_f, :element =>e, :meta => e.meta , :head_id => head_id} %>	
+	  		<% end %>
 		</div>
 	
 	<% end %>
