--- a/app/views/definitions/public_term.html.erb
+++ b/app/views/definitions/public_term.html.erb
@@ -356,7 +356,7 @@ function clear_contents(node)
 			<br><br>
 			<% end %>
 			<% found_previous = true %>
-			<b>OTHER TIBETAN DICTIONARY </b><br><br>
+			<b><%= 'བོད་རྒྱ་ཚིག་མཛོད་ཆེན་མོ།'.span %></b><br><br>
 		<% end %>
 		<% size = @tshig_definitions.size %>
 		<% count = 0 %>
