--- a/app/views/definitions/public_term.html.erb
+++ b/app/views/definitions/public_term.html.erb
@@ -52,6 +52,12 @@ function clear_contents(node)
 		border: solid #0000FF;">
 		
 </div>
+
+<!-- UI Dialog container -->
+<div id="popup_dialog">
+</div>
+
+
 <div class="dictionary_content">
 	<%# this was just for testing the kmaps integration plugin %>
 	<%# data = Category.find(286)
